--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,3 @@
-html,
 body {
 	width: 100%;
 	height: 100%;
@@ -6,6 +5,7 @@ body {
 	overflow: hidden;
 	font-family: "Do Hyeon";
 	background-color: black;
+	visibility: hidden;
 }
 
 #home {
