--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,8 +32,8 @@ body {
 }
 
 #notice {
-	margin-bottom: 2.5rem;
-	color: white;
+	margin-bottom: 5rem;
+	color: #ffffe0;
 	text-align: center;
 	line-height: 1.5;
 	animation: 1.5s linear 0.5s infinite alternate scale-adjustment;
@@ -59,7 +59,7 @@ body {
 	align-items: center;
 	width: calc((100vw + 100vh) * 0.13);
 	border-radius: 30px;
-	box-shadow: 0px 0px 20px 10px white, 0px 0px 50px 30px deepskyblue, 0px 0px 80px 40px rgba(0, 191, 255, 0.5);
+	box-shadow: 0px 0px 20px 10px #fffbc5, 0px 0px 30px 30px #fef052, 0px 0px 80px 50px #fff700;
 	z-index: 0;
 }
 
@@ -97,7 +97,7 @@ input:focus {
 #submit_btn {
 	margin-top: 3rem;
 	padding: 0.438rem 1.75rem;
-	border: thick double white;
+	border: thick double #ffffe0;
 	border-radius: 20px;
 	background: none;
 	font-family: "Do Hyeon";
